# stormcloud

./: .gitignore  Encryption.hs  README.md  build-docker-images.ps1
ios-StormCloud/: Podfile
ios-StormCloud/iOS_StormCloud/: Assets.car  GoogleService-Info.plist  Info.plist  embedded.mobileprovision  ios-StormCloud
ios-StormCloud/iOS_StormCloud/Base.lproj/LaunchScreen.storyboardc/: 01J-lp-oVM-view-Ze5-6b-2t3.nib  UIViewController-01J-lp-oVM.nib
ios-StormCloud/iOS_StormCloud/Base.lproj/Main.storyboardc/: 6hW-dz-seh-view-rWY-fY-R5H.nib  CwK-uk-pwE-view-bN0-Zf-XHF.nib  Info.plist  UITabBarController-CZC-5i-g7M.nib
ios-StormCloud/iOS_StormCloud/Frameworks/: libswiftCoreFoundation.dylib  libswiftCoreGraphics.dylib  libswiftCoreImage.dylib  libswiftDarwin.dylib  libswiftDispatch.dylib  libswiftMetal.dylib  libswiftObjectiveC.dylib  libswiftQuartzCore.dylib  libswiftSwiftOnoneSupport.dylib  libswiftUIKit.dylib  libswiftos.dylib
ios-StormCloud/iOS_StormCloud/Frameworks/GTMOAuth2.framework/: GTMOAuth2  GTMOAuth2ViewTouch.nib  Info.plist
ios-StormCloud/iOS_StormCloud/Frameworks/GTMOAuth2.framework/_CodeSignature/: CodeResources
ios-StormCloud/iOS_StormCloud/Frameworks/GTMSessionFetcher.framework/: GTMSessionFetcher  Info.plist
ios-StormCloud/iOS_StormCloud/Frameworks/GTMSessionFetcher.framework/_CodeSignature/: CodeResources
ios-StormCloud/iOS_StormCloud/Frameworks/GoogleToolboxForMac.framework/: GoogleToolboxForMac  Info.plist
ios-StormCloud/iOS_StormCloud/Frameworks/GoogleToolboxForMac.framework/_CodeSignature/: CodeResources
ios-StormCloud/iOS_StormCloud/_CodeSignature/: CodeResources
ios-StormCloud/ios-StormCloud/: AppDelegate.swift  FileViewController.swift  Info.plist  LoginViewController.swift  MyAppDelegate.swift  ViewController.swift
ios-StormCloud/ios-StormCloud.xcodeproj/: project.pbxproj
ios-StormCloud/ios-StormCloud.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios-StormCloud/ios-StormCloud.xcworkspace/: contents.xcworkspacedata
ios-StormCloud/ios-StormCloud/Assets.xcassets/desktop-year-of-the-tiger-images-wallpaper.imageset/: Contents.json
ios-StormCloud/ios-StormCloud/Base.lproj/: Main.storyboard
ios-StormCloud/ios-StormCloudTests/: AddFiles.swift  ios_StormCloudTests.swift
ios-StormCloud/ios-StormCloudUITests/: ios_StormCloudUITests.swift
server/: .projectile  Dockerfile  certs.json  docker-compose.yml  server.cabal  stack.yaml
server/app/: Main.hs
server/database/: Dockerfile
server/dependencies/: Dockerfile
server/src/: App.hs  Authentication.hs  Config.hs  DatabaseActions.hs  DatabaseTypes.hs  DefaultResponses.hs  Drawing.hs  Error.hs  Login.hs  Prefill.hs  ServerTypes.hs  Tests.hs  Types.hs  Utilities.hs
server/src/Action/: Audit.hs  Base16.hs  Encryption.hs  File.hs  FileServer.hs  HandShake.hs  JsonParse.hs  Keys.hs  Parser.hs  UploadImage.hs
server/src/Page/: Index.hs
server/test/: Spec.hs
storage/: KeySetup.py  echo.py  storageServer.py
