name:                server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Action.UploadImage
                     , Action.Encryption
                     , Action.FileServer
                     , Authentication
                     , Config
                     , DatabaseActions
                     , DatabaseTypes
                     , DefaultResponses
                     , Action.HandShake
                     , Login
                     , Prefill
                     , ServerTypes
                     , Types
                     , Utilities
                     
  build-depends:       base >= 4.7 && < 5
                     , Spock
                     , Spock-lucid
                     , aeson
                     , base16-bytestring
                     , bytestring
                     , cryptohash
                     , cryptonite
                     , directory
                     , hvect
                     , lens-aeson
                     , memory
                     , microlens-platform
                     , monad-logger
                     , mtl
                     , network-simple
                     , optparse-applicative
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , process
                     , protolude
                     , random
                     , text
                     , time
                     , time-units
                     , wai
                     , wai-cors
                     , wai-middleware-static
                     , warp
                     , warp-tls
                     , wreq
                     , saltine
                     , monad-loops
  default-language:    Haskell2010

Executable server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                     
  build-depends:       base
                     , server
                     , aeson
                     , protolude
  default-language:    Haskell2010

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , server
                     , hspec
                     , wreq
                     , lens-aeson
                     , microlens-platform
                     , protolude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/server
